--- a/public/compra.html
+++ b/public/compra.html
@@ -189,6 +189,7 @@
         <th>Nombre</th>
         <th>Descripción</th>
         <th>Precio</th>
+        <th>Stock</th>
         <th>Temporada</th>
         <th>Acción</th>
       </tr>
