--- a/public/ventas.html
+++ b/public/ventas.html
@@ -8,14 +8,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    
     <style>
-        /* Estilos para el dashboard */
+        /* ESTILOS PARA EL DASHBOARD */
+        body {
+            padding-bottom: 100px;
+        }
+
         .dashboard-container {
             padding: 30px 15px;
             max-width: 1400px;
             margin: 0 auto;
         }
 
+        /* Tarjetas de estadísticas */
         .stats-card {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             border-radius: 15px;
@@ -23,18 +29,21 @@
             color: white;
             text-align: center;
             box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-            transition: transform 0.3s ease;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
             margin-bottom: 20px;
+            height: 100%;
         }
 
         .stats-card:hover {
             transform: translateY(-5px);
+            box-shadow: 0 8px 25px rgba(0,0,0,0.4);
         }
 
         .stats-icon {
             font-size: 2.5em;
             margin-bottom: 10px;
             color: #ffd700;
+            text-shadow: 0 0 10px rgba(255,215,0,0.3);
         }
 
         .stats-value {
@@ -42,14 +51,16 @@
             font-weight: bold;
             color: #ffd700;
             text-shadow: 0 0 10px rgba(255,215,0,0.5);
+            margin: 10px 0;
         }
 
         .stats-label {
-            font-size: 0.9em;
+            font-size: 0.95em;
             opacity: 0.9;
             margin-top: 5px;
         }
 
+        /* Contenedores de gráficas */
         .chart-container {
             background: linear-gradient(to bottom, #790A07 0%, #DC4141 50%, #400505 100%);
             border-radius: 15px;
@@ -63,10 +74,11 @@
             position: relative;
         }
 
+        /* Tabla de stock bajo */
         .table-container {
             background: white;
             border-radius: 15px;
-            padding: 20px;
+            padding: 25px;
             margin-top: 30px;
             box-shadow: 0 4px 15px rgba(0,0,0,0.2);
         }
@@ -74,32 +86,84 @@
         .table-container h4 {
             color: #790A07;
             margin-bottom: 20px;
+            font-weight: bold;
         }
 
+        .table-container table {
+            margin: 0;
+        }
+
+        /* Botón actualizar flotante */
         .btn-actualizar {
             position: fixed;
             bottom: 30px;
             right: 30px;
             z-index: 1000;
             box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+            padding: 15px 25px;
+            font-size: 1.1em;
         }
 
+        .btn-actualizar:hover {
+            transform: scale(1.05);
+        }
+
+        /* Responsive */
         @media (max-width: 768px) {
             .chart-canvas {
                 height: 300px;
             }
+
+            .stats-value {
+                font-size: 1.5em;
+            }
+
+            .stats-icon {
+                font-size: 2em;
+            }
+
+            .btn-actualizar {
+                bottom: 15px;
+                right: 15px;
+                padding: 12px 20px;
+                font-size: 1em;
+            }
+
+            .dashboard-container {
+                padding: 15px 10px;
+            }
+        }
+
+        /* Loading spinner */
+        .loading-spinner {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 400px;
+            color: #fff;
+        }
+
+        .loading-spinner i {
+            font-size: 3em;
+            animation: spin 1s linear infinite;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
     </style>
 </head>
 <body>
 
 <div class="header">
-    <h1 class="header h1">Dashboard de Ventas 📊</h1>
+    <h1 class="header h1">📊 Dashboard de Ventas</h1>
 </div>
 
+<!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-success px-3">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">Panadería</a>
+    <a class="navbar-brand" href="index.html">🎄 Panadería</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
@@ -167,9 +231,9 @@
 <!-- DASHBOARD PRINCIPAL -->
 <div class="dashboard-container">
 
-    <!-- TARJETAS DE ESTADÍSTICAS -->
+    <!-- SECCIÓN 1: TARJETAS DE ESTADÍSTICAS GENERALES -->
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-lg-3 col-md-6 mb-3">
             <div class="stats-card">
                 <div class="stats-icon">
                     <i class="fas fa-shopping-cart"></i>
@@ -179,7 +243,7 @@
             </div>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-lg-3 col-md-6 mb-3">
             <div class="stats-card">
                 <div class="stats-icon">
                     <i class="fas fa-dollar-sign"></i>
@@ -189,7 +253,7 @@
             </div>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-lg-3 col-md-6 mb-3">
             <div class="stats-card">
                 <div class="stats-icon">
                     <i class="fas fa-chart-line"></i>
@@ -199,7 +263,7 @@
             </div>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-lg-3 col-md-6 mb-3">
             <div class="stats-card">
                 <div class="stats-icon">
                     <i class="fas fa-crown"></i>
@@ -210,7 +274,7 @@
         </div>
     </div>
 
-    <!-- GRÁFICA: PRODUCTOS MÁS VENDIDOS -->
+    <!-- SECCIÓN 2: PRODUCTOS MÁS VENDIDOS -->
     <div class="row mt-4">
         <div class="col-12">
             <div class="chart-container">
@@ -221,9 +285,9 @@
         </div>
     </div>
 
-    <!-- GRÁFICAS: TEMPORADAS Y VENTAS POR MES -->
+    <!-- SECCIÓN 3: TEMPORADAS Y EVOLUCIÓN MENSUAL -->
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-lg-6 mb-4">
             <div class="chart-container">
                 <div class="chart-canvas">
                     <canvas id="grafica-temporadas"></canvas>
@@ -231,7 +295,7 @@
             </div>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-lg-6 mb-4">
             <div class="chart-container">
                 <div class="chart-canvas">
                     <canvas id="grafica-ventas-mes"></canvas>
@@ -240,7 +304,7 @@
         </div>
     </div>
 
-    <!-- GRÁFICA: TOP CLIENTES -->
+    <!-- SECCIÓN 4: TOP CLIENTES -->
     <div class="row">
         <div class="col-12">
             <div class="chart-container">
@@ -251,27 +315,31 @@
         </div>
     </div>
 
-    <!-- TABLA: PRODUCTOS CON STOCK BAJO -->
+    <!-- SECCIÓN 5: TABLA DE STOCK BAJO -->
     <div class="table-container">
         <h4>
             <i class="fas fa-exclamation-triangle text-warning"></i>
-            Productos con Stock Bajo (menos de 10 unidades)
+            Productos con Stock Bajo
         </h4>
+        <p class="text-muted mb-3">
+            <small>Mostrando productos con menos de 10 unidades en inventario</small>
+        </p>
         <div class="table-responsive">
-            <table class="table table-striped table-hover">
+            <table class="table table-striped table-hover align-middle">
                 <thead class="table-dark">
                     <tr>
-                        <th>ID</th>
+                        <th width="80">ID</th>
                         <th>Producto</th>
-                        <th>Stock</th>
-                        <th>Temporada</th>
-                        <th>Precio</th>
+                        <th width="120">Stock</th>
+                        <th width="180">Temporada</th>
+                        <th width="120">Precio</th>
                     </tr>
                 </thead>
                 <tbody id="tbody-stock-bajo">
                     <tr>
-                        <td colspan="5" style="text-align: center;">
-                            <i class="fas fa-spinner fa-spin"></i> Cargando...
+                        <td colspan="5" style="text-align: center; padding: 40px;">
+                            <i class="fas fa-spinner fa-spin fa-2x text-primary"></i>
+                            <p class="mt-3 mb-0 text-muted">Cargando datos...</p>
                         </td>
                     </tr>
                 </tbody>
@@ -282,8 +350,8 @@
 </div>
 
 <!-- BOTÓN ACTUALIZAR FLOTANTE -->
-<button class="btn btn-primary btn-lg btn-actualizar" id="btn-actualizar-graficas">
-    <i class="fas fa-sync-alt"></i> Actualizar Gráficas
+<button class="btn btn-primary btn-lg btn-actualizar" id="btn-actualizar-graficas" title="Actualizar todas las gráficas">
+    <i class="fas fa-sync-alt"></i> Actualizar
 </button>
 
 <!-- NIEVE NAVIDEÑA -->
@@ -307,7 +375,7 @@
 <!-- FOOTER -->
 <footer class="footer">
     <div class="wrapper">
-        <a href="#" class="icon facebook" name="acerca">
+        <a href="#" class="icon facebook">
             <div class="tooltip">Facebook</div>
             <span><i class="fab fa-facebook-f"></i></span>
         </a>
