--- a/public/perfil.html
+++ b/public/perfil.html
@@ -301,28 +301,56 @@
   </div>
 </dialog>
 
-<dialog id="modal-historial" style="width: 90%; max-width: 900px; max-height: 90vh; overflow-y: auto;">
-  <button class="btn-modal cerrar-btn btn-x" data-close="modal-historial">X</button>
-  <h2>📜 Mi Historial de Compras</h2>
-  <div id="mensaje-sin-compras" class="alert alert-info text-center d-none" style="margin: 20px 0;">
-    <i class="fas fa-shopping-bag fa-3x mb-3" style="color: #17a2b8;"></i>
-    <p class="mb-0" style="color: #333;">Aún no has realizado ninguna compra.</p>
-    <a href="compra.html" class="btn btn-primary mt-3">🛒 Ir a Comprar</a>
+<!-- MODAL: HISTORIAL DE COMPRAS -->
+<dialog id="modal-historial" style="width: 90%; max-width: 1000px; max-height: 90vh; overflow-y: auto;">
+  <button class="btn-modal cerrar-btn btn-x" data-close="modal-historial" type="button">✕</button>
+  
+  <h2 style="color: #ffd700; text-align: center; margin-bottom: 25px;">
+    <i class="fas fa-history"></i> Mi Historial de Compras
+  </h2>
+
+  <!-- Mensaje cuando no hay compras -->
+  <div id="mensaje-sin-compras" class="d-none" style="text-align: center; padding: 60px 20px; background: rgba(255,255,255,0.1); border-radius: 15px; margin: 20px 0;">
+    <i class="fas fa-shopping-bag fa-4x mb-4" style="color: #17a2b8; opacity: 0.5;"></i>
+    <h4 style="color: #ffd700; margin-bottom: 15px;">Aún no has realizado ninguna compra</h4>
+    <p style="color: white; opacity: 0.8; margin-bottom: 25px;">
+      ¡Explora nuestros deliciosos productos navideños!
+    </p>
+    <a href="compra.html" class="btn btn-success btn-lg">
+      <i class="fas fa-shopping-cart"></i> Ir a Comprar
+    </a>
   </div>
+
+  <!-- Lista de compras -->
   <div id="lista-compras-modal"></div>
-  <div style="text-align: center; margin-top: 20px;">
-    <button class="btn btn-secondary" data-close="modal-historial">Cerrar</button>
+
+  <!-- Botones del modal -->
+  <div style="text-align: center; margin-top: 30px; padding-top: 20px; border-top: 2px solid rgba(255,255,255,0.2);">
+    <button class="btn btn-secondary btn-lg" data-close="modal-historial">
+      <i class="fas fa-times"></i> Cerrar
+    </button>
   </div>
 </dialog>
 
-<!-- Modal Detalle Compra -->
-<dialog id="modal-detalle-compra" style="width: 90%; max-width: 700px; max-height: 90vh; overflow-y: auto;">
-  <button class="btn-modal cerrar-btn btn-x" data-close="modal-detalle-compra">X</button>
-  <h2>📋 Detalle de Compra</h2>
+<!-- MODAL: DETALLE DE COMPRA -->
+<dialog id="modal-detalle-compra" style="width: 90%; max-width: 800px; max-height: 90vh; overflow-y: auto;">
+  <button class="btn-modal cerrar-btn btn-x" data-close="modal-detalle-compra" type="button">✕</button>
+  
+  <h2 style="color: #ffd700; text-align: center; margin-bottom: 25px;">
+    <i class="fas fa-receipt"></i> Detalle de Compra
+  </h2>
+
+  <!-- Contenido del detalle -->
   <div id="contenido-detalle-compra" style="padding: 20px 0;"></div>
-  <div style="text-align: center; margin-top: 20px; display: flex; gap: 10px; justify-content: center;">
-    <button class="btn btn-secondary" id="btn-volver-historial">⬅️ Volver</button>
-    <button class="btn btn-danger" data-close="modal-detalle-compra">Cerrar</button>
+
+  <!-- Botones del modal -->
+  <div style="text-align: center; margin-top: 30px; padding-top: 20px; border-top: 2px solid rgba(255,255,255,0.2); display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
+    <button class="btn btn-info btn-lg" onclick="volverAHistorial()">
+      <i class="fas fa-arrow-left"></i> Volver al Historial
+    </button>
+    <button class="btn btn-secondary btn-lg" data-close="modal-detalle-compra">
+      <i class="fas fa-times"></i> Cerrar
+    </button>
   </div>
 </dialog>
 
